Adding icons and starting Layout Design

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,6 +12,25 @@ page-home {
     overflow: scroll;
 }
 
+.icon{
+    border-style:solid;
+    border-width:1px;
+    border-color:#00BCD4;
+}
+
+.img-grid{
+   border-style:solid;
+   border-width:1px;
+   border-color:#dbbe5f;
+}
+
+.img-grid-sentence{
+    border-style:solid;
+    border-width:1px;
+    border-color:#dbbe5f;
+    width:60%;
+    height: 60%;
+ }
 
 }
 
