--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,15 +5,22 @@ page-home {
     width:100%;
     height:100%;
 }
-
+.back-amber{
+    background-color: #FFF8E1;
+}
 .grid-images{
     width:60%;
     height:60%;
     overflow: scroll;
 }
+.logo{
+    width:100px;
+    height: 50px;
+}
 
 .icon{
     border-style:solid;
+    background-color:#ffffff;
     border-width:1px;
     border-color:#00BCD4;
 }
