Adding basic verbs (want & don't want)

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -21,6 +21,8 @@ page-home {
 .icon{
     border-style:solid;
     background-color:#ffffff;
+    width:96px;
+    height:96px;
     border-width:1px;
     border-color:#00BCD4;
 }
